Darken remove field button & correct required tag contrast

--- a/app/assets/stylesheets/oregon_digital/_buttons.scss
+++ b/app/assets/stylesheets/oregon_digital/_buttons.scss
@@ -35,6 +35,10 @@ input.link {
     }
   }
 
+  &.remove {
+    color: #c84c48;
+  }
+
   &.btn-outline {
     background: unset;
     border-radius: 0 !important;
